<?xml version="1.0"?>
<package format="2">
    <name>iris_sami</name>
    <version>0.0.0</version>
    <description>Simple Arm Manipulation Interface</description>

    <author email="efp@ua.pt">Eurico Farinha Pedrosa</author>
    <maintainer email="efp@ua.pt">Eurico Farinha Pedrosa</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rqt_gui</build_depend>
    <build_depend>rqt_gui_py</build_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rqt_gui</build_export_depend>
    <build_export_depend>rqt_gui_py</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>
    <exec_depend>behaviortree_cpp_v3</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    
    <export>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
